--- a/assets/defaults/bootstrap-settings.default.json
+++ b/assets/defaults/bootstrap-settings.default.json
@@ -14,8 +14,12 @@
   "javascript": {
     "namespace": "Bootstrap",
 
+    "expose": false,
+
     "modules": {
       /*JS_MODULES*/
     }
-  }
+  },
+
+  "version": 2
 }
